Added error messages validity, still need alert function

--- a/src/main/resources/templates/demo.html
+++ b/src/main/resources/templates/demo.html
@@ -10,6 +10,11 @@
     <input type="submit" value="Submit"><br>
 </form>
 <p th:text="'Hello, ' + ${name} + '!'" />
+<!--
+<div th:text = "${message}"/>
+    this is error message from flash attribute, lifespan is dead after one use
+    learn to make this as an Alert function
+-->
 </body>
 <script>
 
