--- a/src/main/resources/templates/demo.html
+++ b/src/main/resources/templates/demo.html
@@ -10,10 +10,14 @@
     <input type="submit" value="Submit"><br>
 </form>
 <p th:text="'Hello, ' + ${name} + '!'" />
+<h1 id = "data"></h1>
 
 </body>
 <script th:inline = "javascript">
     var msg = [[${message}]]
+    var allData = [[${allData}]]
+    var ele = document.getElementById("data")
+    ele.innerHTML = typeof allData
     if(msg != null) {
         alert(msg);
     }
